--- a/libft/Makefile
+++ b/libft/Makefile
@@ -30,6 +30,7 @@ SRC = ft_strlen.c \
 		ft_strrchr.c \
 		ft_strnstr.c \
 		ft_strncmp.c \
+		ft_strcmp.c \
 		ft_memset.c \
 		ft_memcpy.c \
 		ft_memccpy.c \
